# misis-lords-of-the-flies

./: .gitignore  README.md  generate_diplomas.py  package.xml  requirements.txt  setup.cfg  setup.py
config/: drone_params.yaml
launch/: single_drone.launch.py
src/lords_of_the_flies/: __init__.py  aruco_navigator.py  drone_controller.py  maze_graph.py  optical_flow_fusion.py  path_planner.py  utils.py  yolo_detector.py
tests/: test_utils.py
