<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lords_of_the_flies</name>
  <version>0.1.0</version>
  <description>Autonomous drone swarm control system for ROS2 Humble</description>

  <maintainer email="s.simaranov8@gmail.com">Misis lords of the flies</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/s1rbe/misis-lords-of-the-flies</url>
  <url type="bugtracker">https://github.com/s1rne/misis-lords-of-the-flies/issues</url>

  <author email="s.simaranov8@gmail.com">Alexander Simaranov</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
